[tool.poetry]
name = "pyshsh"
version = "0.1"
description = "A Python tool for saving SHSH blobs for Apple devices."
authors = ["m1stadev <adamhamdi31@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/m1stadev/PySHSH"
keywords = ["apple", "tss", "shsh", "ios"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.7",
    "Topic :: Utilities"
]
packages = [
    { include = "pyshsh" }
]

[tool.poetry.scripts]
pyshsh = "pyshsh.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"
src_paths = ["pytest"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/m1stadev/PySHSH/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
